style.css
.bg-header-mine {
  background-color: rgb(36, 76, 237);
}

.btn-clr {
  background-color: rgb(36, 76, 237);
  color: white;
}

.navbar-brand {
  font-size: 50px;
  margin-left: 20px;
  display: flex;
  align-items: center;
  color: white;
}

.navbar-brand img {
  width: 75px;
  height: auto;
  border-radius: 25%;
  margin-right: 5%;
}

@media (max-width: 576px) {
  .navbar-brand {
    font-size: 20px;
  }
  .navbar-brand img {
    width: 20px;
    margin-right: 10px;
  }
}

nav,
header {
  padding-bottom: 20px;
}

main {
  padding-top: 20px;
}

body {
  background-color: your_color_here;
}

/* For specific elements */
/* .header {
  background-color: your_color_here;
} */

.card {
  background-color: rgb(37, 180, 237);
}

/* Will be used (someday) for gif backgrounds
.card {
  background-color: transparent;
  padding: 0;
  margin: 0;
} */

